<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_home"
      android:icon="@drawable/ic_home"
      android:title="@string/app_bar_home"
      app:showAsAction="always"/>

  <item
      android:id="@+id/action_my_careers"
      android:icon="@drawable/ic_my_careers"
      android:title="@string/app_bar_my_careers"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_staggered_grid_colors"
      android:icon="@drawable/ic_staggered_grid_colors"
      android:title="@string/app_bar_staggered_grid_colors"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_weather_http_response"
      android:icon="@drawable/ic_weather_api"
      android:title="@string/app_bar_weather_api"
      app:showAsAction="ifRoom"/>
</menu>
